--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # SonarQube server settings
 sonar.host.url=http://localhost:9000
-sonar.token=sqp_f8925cbd8654956df06bef97340260ae34c530f3
+sonar.token=squ_e1fb31bb9d2dee8bb61d720713e89a8e0bd3c3dd
 
 # Project identification
 sonar.projectKey=econ
@@ -9,3 +9,7 @@ sonar.projectVersion=1.0
 
 # Analysis settings
 sonar.sources=client
+
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.language=js
+sonar.inclusions=**.*.js
