--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,4 +12,4 @@ sonar.sources=client
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.language=js
-sonar.inclusions=**.*.js
+sonar.inclusions=**/*.js
