--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^8.1.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3",
+    "react-icons": "^5.5.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
