--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ecom",
   "version": "1.0.0",
   "description": "ecommerce rest api",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -31,7 +32,6 @@
     "mongoose": "^8.1.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3",
-    "react-icons": "^5.5.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
@@ -39,7 +39,6 @@
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
     "@playwright/test": "^1.44.0",
-    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20.12.12",
     "babel-jest": "^29.7.0",
     "identity-obj-proxy": "^3.0.0",
