feat(integration test): implement "successfully gets all categories" test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "conventionalCommits.scopes": [
         "unit test",
-        "UI test"
+        "UI test",
+        "integration test"
     ]
 }
