--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ecom",
   "version": "1.0.0",
+  "type": "module",
   "description": "ecommerce rest api",
   "main": "server.js",
   "scripts": {
@@ -20,7 +21,7 @@
   "author": "RP",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^6.0.0",
     "braintree": "^3.22.0",
     "colors": "^1.4.0",
     "concurrently": "^8.2.2",
@@ -29,6 +30,8 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
+    "express-rate-limit": "^8.2.1",
+    "express-xss-sanitizer": "^2.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongodb-memory-server": "^10.2.3",
@@ -48,7 +51,6 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "mongodb-memory-server": "^10.2.3",
-    "sonarqube-scanner": "^4.3.0",
     "supertest": "^7.1.4"
   }
 }
