--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "mongoose": "^8.1.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "sonarqube-scanner": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
