--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ecom",
   "version": "1.0.0",
+  "type": "module",
   "description": "ecommerce rest api",
   "main": "server.js",
   "scripts": {
@@ -29,6 +30,8 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
+    "express-rate-limit": "^8.2.1",
+    "express-xss-sanitizer": "^2.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongodb-memory-server": "^10.2.3",
