chore: rename login porcessor to artillery processor

--- a/tests/performance/artillery/login-capacity-frontend.yml
+++ b/tests/performance/artillery/login-capacity-frontend.yml
@@ -18,7 +18,7 @@ config:
         headless: true
   plugins:
     expect: {}
-  processor: "./login-processor.js"
+  processor: "./artillery-processor.js"
 
 scenarios:
   - engine: playwright
